# crawler_sys

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
src/: .gitignore  debug_page.html  k8s-ml.yaml  main.py  playwright_env.py  requirement.txt  test.py
src/config/: config_reader.py  env_loader.py  kktix.yaml
src/core/: base.py  browser.py  human_behavior.py  recaptcha.py  runner.py
src/model/: enums.py  metrics.py  page.py
src/sites/: utils.py
src/sites/config/: kktix.yaml
src/sites/kktix/: crawler.py  map.py
src/sites/persist/: Local State  first_party_sets.db
src/sites/persist/Default/: BrowsingTopicsState  DIPS  Favicons  History  MediaDeviceSalts  Network Action Predictor  Preferences  Secure Preferences  Top Sites  Web Data  passkey_enclave_state
src/sites/persist/Default/DawnGraphiteCache/: data_1  index
src/sites/persist/Default/DawnWebGPUCache/: data_1  index
src/sites/persist/Default/Extension Rules/: LOG
src/sites/persist/Default/Extension Scripts/: LOG
src/sites/persist/Default/Extension State/: LOG  LOG.old
src/sites/persist/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  f_00000e  f_00000f  f_000010  f_000011  f_000012  f_000013  f_000014  f_000015  index
src/sites/persist/GraphiteDawnCache/: data_1  index
src/sites/persist/ShaderCache/: data_1  index
src/sites/persist/segmentation_platform/: ukm_db
src/sites/states/: kktix.json
src/utils/: env_loader.py  jitter.py  logger_factory.py  metrics.py
(+2151 files in other folders)
